# ebook-reader

./: .dockerignore  .env-example  .gitignore  CACHING_FEATURE.md  Dockerfile  README.md  config.py  demo_caching.py  docker-compose.yml  main.py  mom-reading-material.txt  pyproject.toml  test_cache.py
.github/workflows/: docker-build.yml
services/: __init__.py  gemini_service.py  whisper_service.py  youtube_service.py
tests/: test_services.py
ui/: __init__.py  app.py
utils/: __init__.py  text_processing.py
